src/objects/BlueWave_Blog__c.object
<CustomObject>
    <fields>
        <fullName>Blog_Type__c</fullName>
        <label>Blog Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Loan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>BlueWave Blog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BlueWave Blog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>